[*] fix overflow bonus point absolute

--- a/app/ui/components/templates/StratagemsLayout/StratagemsLayout.module.css
+++ b/app/ui/components/templates/StratagemsLayout/StratagemsLayout.module.css
@@ -145,7 +145,6 @@
   margin-bottom: 3rem;
   user-select: none;
   z-index: 2;
-  overflow: hidden;
 }
 
 .activeStratagemsInfo {
